# hundred-hammers

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  hundred_hammers.rst  index.rst  modules.rst  requirements.txt  tutorials.rst
docs/examples/: example_classification.ipynb  example_regression.ipynb
examples/: example_add_model.ipynb  example_add_model.py  example_classification.ipynb  example_classification.py  example_multiple_datasets.ipynb  example_multiple_datasets.py  example_regression.ipynb  example_regression.py
hundred_hammers/: __init__.py  base.py  classifier.py  config.py  hyperparam_info.json  hyperparam_info.py  hyperparameters.py  metric_alias.py  model_zoo.py  plots.py  regressor.py  utils.py
src/hundred_hammers/: __init__.py  base.py  classifier.py  config.py  hyperoptimizer.py  hyperparam_info.py  hyperparameters.py  metric_alias.py  model_zoo.py  plots.py  regressor.py  utils.py
test/: classification.py  regression.py  test_classification.py  test_hyperparam_defs.py  test_progress_bars.ipynb  test_progress_bars.py  test_regression.py
