[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hundred-hammers"
version = "1.0.4"
authors = [
  { name="Vinícius Garcia", email="vinizinho@vinizinho.net" },
]
description = "Quickly try out several ML models on a given dataset"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vgarciasc/hundred-hammers"
"Bug Tracker" = "https://github.com/vgarciasc/hundred-hammers/issues"