[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hundred-hammers"
version = "1.0.5"
authors = [
  { name="Vinícius Garcia", email="vinizinho@vinizinho.net" },
]
description = "Quickly try out several ML models on a given dataset"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "adjustText==0.8",
    "contourpy==1.1.0",
    "cycler==0.11.0",
    "fonttools==4.42.1",
    "joblib==1.3.2",
    "matplotlib==3.7.2",
    "numpy==1.25.2",
    "packaging==23.1",
    "pandas==2.0.3",
    "Pillow==10.0.0",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "scikit-learn==1.3.0",
    "scipy==1.11.2",
    "seaborn==0.12.2",
    "six==1.16.0",
    "tzdata==2023.3",
    "xgboost==1.7.6",
    "scikit-elm==0.21a0",
    "dask[distributed]==2023.9.0",
    "schema==0.7.5",
    "tqdm==4.62.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "coverage==7.3.1",
    "black[jupyter]==23.10.1",
    "sphinx==7.1.1",
    "pydata_sphinx_theme==0.14.4"
]

[project.urls]
"Homepage" = "https://github.com/vgarciasc/hundred-hammers"
"Bug Tracker" = "https://github.com/vgarciasc/hundred-hammers/issues"
